--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Modelo</title>
+    <title>Hora do Dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>
-            Title
+            Hora do Dia
         </h1>
     </header>
 
     <section>
-        <div>
+        <div id="msg">
             Content 0
         </div>
-        <div>
-            Content 1
+        <div id="foto">
+            <img id="image" src="night.png" alt="foto da hora do dia">
         </div>
     </section>
 
     <footer>
-        <p>Me encontre no </p><a class="github" href="https://github.com/EdOzz42">GitHub</a>
+        <p>
+            Me encontre no <a class="github" href="https://github.com/EdOzz42">GitHub</a>
+        </p>
     </footer>
 
     <script src="javascript.js"></script>
