--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <title>Hora do Dia</title>
 </head>
 <body onload="carregar()">
@@ -14,14 +15,16 @@
         </h1>
     </header>
 
-    <section>
-        <div id="msg">
-            Content 0
-        </div>
-        <div id="foto">
-            <img id="image" src="night.png" alt="foto da hora do dia">
-        </div>
-    </section>
+    <main>
+        <section>
+            <div id="msg">
+                <h1>Hora do dia</h1>
+            </div>
+            <div id="foto">
+                <img id="image" src="" alt="foto da hora do dia">
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>
